--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,5 @@ services:
     build: .
     ports:
       - "3000:3000"
-    volumes:
-      - .:/app
-      - /app/node_modules
     env_file:
-      - .env.local
+      - .env
